--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,16 +15,21 @@
     "browserify": "^13.0.0",
     "core-js": "^2.1.4",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
+    "gulp-envify": "^1.0.0",
     "gulp-filter": "^4.0.0",
     "gulp-if": "^2.0.0",
+    "gulp-minify-css": "^1.2.4",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "lodash": "^4.6.1",
+    "merge-stream": "^1.0.0",
+    "rimraf": "^2.5.2",
     "vidom": "^0.1.7",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
