--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -15,4 +15,10 @@ AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application
 	ExpiresActive on
     ExpiresDefault "access plus 1 day"
 </FilesMatch>
+
+<FilesMatch "styles\.json$">
+	ExpiresActive on
+	ExpiresDefault "access plus 1 hour"
+</FilesMatch>
+
 FileETag none
