--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "build": "./node_modules/gulp/bin/gulp.js build"
   },
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.6.5",
+    "babel-plugin-transform-proto-to-assign": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015-loose": "^7.0.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "core-js": "^2.1.4",
