--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -17,6 +17,7 @@ AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application
 </FilesMatch>
 
 <FilesMatch "styles\.json$">
+	Header set Access-Control-Allow-Origin "*"
 	ExpiresActive on
 	ExpiresDefault "access plus 1 minute"
 </FilesMatch>
