--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,38 +5,49 @@
   "description": "",
   "private": true,
   "repository": "",
+  "browserslist": "firefox >= 68, chrome >=67, edge >= 15, safari >= 10, last 2 versions, not dead, ie 11",
+  "type": "module",
   "scripts": {
-    "start": "./node_modules/gulp/bin/gulp.js",
-    "build": "./node_modules/gulp/bin/gulp.js build"
+    "build": "NODE_ENV=production run-p 'build:js -s' 'build:scss -s' && npm run build:postprocess",
+    "build:js": "mkdir -p build/static && NODE_ENV=production rollup -c",
+    "build:scss": "for f in scss/*.scss; do sass --no-source-map $f build/css/`basename $f .scss`.css; done;",
+    "clean": "rimraf build lang",
+    "devel:js": "rollup -c -w",
+    "devel:scss": "for f in scss/*.scss; do sass --embed-source-map --watch $f build/css/`basename $f .scss`.css; done;",
+    "build:postprocess": "postcss build/css/style.css --use autoprefixer --use cssnano --no-map -r",
+    "start": "mkdir -p build && run-p 'devel:js -s' 'devel:scss -s'"
+  },
+  "dependencies": {
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^22.0.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-replace": "^4.0.0",
+    "core-js": "^3.23.5",
+    "lodash": "^4.17.21",
+    "rollup-plugin-filesize": "^9.1.2",
+    "rollup-plugin-sizes": "^1.0.4",
+    "rollup-plugin-terser": "^7.0.2",
+    "tether-drop": "^1.4.2",
+    "vidom": "=0.1.7",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.6.5",
-    "babel-plugin-transform-proto-to-assign": "^6.6.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-es2015-loose": "^7.0.0",
-    "babelify": "^7.2.0",
-    "browserify": "^13.0.0",
-    "core-js": "^2.1.4",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.0",
-    "gulp-envify": "^1.0.0",
-    "gulp-filter": "^4.0.0",
-    "gulp-if": "^2.0.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.2.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.3",
-    "lodash": "^4.6.1",
-    "merge-stream": "^1.0.0",
-    "rimraf": "^2.5.2",
-    "tether-drop": "^1.4.2",
-    "vidom": "^0.1.7",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "whatwg-fetch": "^0.11.0"
+    "@babel/core": "^7.18.9",
+    "@babel/eslint-parser": "^7.18.9",
+    "@babel/plugin-transform-runtime": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
+    "autoprefixer": "^10.4.7",
+    "cssnano": "^5.1.12",
+    "eslint": "^8.20.0",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.14",
+    "postcss-cli": "^10.0.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.77.0",
+    "sass": "^1.53.0",
+    "stylelint": "^14.9.1",
+    "stylelint-config-recommended-scss": "^7.0.0",
+    "stylelint-config-standard": "^26.0.0",
+    "stylelint-scss": "^4.3.0"
   }
 }
