Rewrite using modern JS libraries. Fix #47
* Switch from vidom to preact
* Switch from tether-drop to floating-ui
* Fix positioning issue when not many results
* Move searching logic to a worker for even more responsive UI
* More efficient style tooltips
* Drop support for IE11 & Safari < 10.1
* Reduce bundle size

--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -1,5 +1,4 @@
 {
-    "root": true,
     "globals": {},
     "parser": "@babel/eslint-parser",
     "env": {
@@ -9,9 +8,62 @@
     },
     "parserOptions": {
         "ecmaVersion": 8,
-        "sourceType": "module"
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "babelOptions": {
+			"plugins": [
+				"@babel/plugin-syntax-jsx"
+            ]
+        }
     },
+    "plugins": ["react", "react-hooks"],
     "extends": [
-        "eslint:recommended"
-    ]
+        "eslint:recommended",
+        "plugin:react-hooks/recommended"
+    ],
+    "rules": {
+        "react/no-deprecated": 2,
+        "react/react-in-jsx-scope": 0, // handled this automatically
+        "react/display-name": [
+            1,
+            { "ignoreTranspilerName": false
+            }
+        ],
+        "react/jsx-no-bind": [
+            1,
+            {
+            "ignoreRefs": true,
+            "allowFunctions": true,
+            "allowArrowFunctions": true
+            }
+        ],
+        "react/jsx-no-comment-textnodes": 2,
+        "react/jsx-no-duplicate-props": 2,
+        "react/jsx-no-target-blank": 2,
+        "react/jsx-no-undef": 2,
+        "react/jsx-tag-spacing": [
+            0,
+            { "beforeSelfClosing": "always"
+            }
+        ],
+        "react/jsx-uses-react": 2, // debatable
+        "react/jsx-uses-vars": 2,
+        "react/jsx-key": [
+            2,
+            { "checkFragmentShorthand": true
+            }
+        ],
+        "react/self-closing-comp": 0,
+        "react/prefer-es6-class": 2,
+        "react/prefer-stateless-function": 1,
+        "react/require-render-return": 2,
+        // Legacy APIs not supported in Preact:
+        "react/no-did-mount-set-state": 2,
+        "react/no-did-update-set-state": 2,
+        "react/no-find-dom-node": 2,
+        "react/no-is-mounted": 2,
+        "react/no-string-refs": 2
+    }
 }
